<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Feed Tecnonutri</string>

    <string name="meal_0">Café da Manhã</string>
    <string name="meal_1">Lanche da Manhã</string>
    <string name="meal_2">Almoço</string>
    <string name="meal_3">Lanche da Tarde</string>
    <string name="meal_4">Jantar</string>
    <string name="meal_5">Ceia</string>
    <string name="meal_6">Pré-Treino</string>
    <string name="meal_7">Pós-Treino</string>

    <string name="of">de</string>
    <string name="date_mask">dd/MM/yyyy</string>
    <string name="kcal">Kcal</string>
    <string name="profile">Perfil</string>
    <string name="detail">Detalhes</string>
    <string name="cal">cal</string>
    <string name="error_try_again_later">Erro, tente novamente mais tarde!</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-1114567562439612/2154687649</string>
    <string name="YOUR_ADMOB_APP_ID" translatable="false">ca-app-pub-1114567562439612~9799451361</string>
    <string name="name_of_author">Nome do Autor</string>
    <string name="goal">Objetivo</string>
    <string name="carb">Carb</string>
    <string name="prot">Prot</string>
    <string name="gord">Gord</string>
    <string name="feed_tecnonutri">Feed Tecnonutri</string>
    <string name="detail_feed">Detalhes Feed</string>
    <string name="detail_profile">Detalhes Perfil</string>
    <string name="g">g</string>
    <string name="total_consumido">Total consumido</string>
    <string name="no_results_for_filter">Nenhum resultado disponível</string>
    <string name="error_loading_image">Erro ao carregar a imagem</string>
    <string name="name_of_food">Nome do alimento</string>
</resources>