<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/adView">

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <android.support.v4.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_above="@+id/relative_footer">


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <RelativeLayout
                            android:id="@+id/header_feed_card"
                            android:layout_width="match_parent"
                            android:layout_height="60dp">

                            <ImageView
                                android:id="@+id/imageview_profile"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_centerVertical="true"
                                android:layout_marginLeft="20dp" />

                            <TextView
                                android:id="@+id/textview_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:layout_marginTop="10dp"
                                android:layout_toRightOf="@+id/imageview_profile"
                                android:fontFamily="sans-serif-medium"
                                android:maxLines="1"
                                android:text="@string/name_of_author"
                                android:textColor="@color/color_primary"
                                android:textSize="16sp"
                                android:textStyle="normal" />

                            <TextView
                                android:id="@+id/textview_goal"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/textview_name"
                                android:layout_marginLeft="10dp"
                                android:layout_toRightOf="@+id/imageview_profile"
                                android:fontFamily="sans-serif"
                                android:text="@string/goal"
                                android:textColor="#5a5757"
                                android:textSize="14sp"
                                android:textStyle="normal" />

                        </RelativeLayout>

                        <RelativeLayout
                            android:id="@+id/relative_image"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/header_feed_card">

                            <ImageView
                                android:id="@+id/imageview_meal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="#257575" />

                            <ProgressBar
                                android:id="@+id/progressBar"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:layout_centerVertical="true"
                                android:layout_gravity="center"
                                android:indeterminate="true" />

                            <RelativeLayout
                                android:id="@+id/view_click_like"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:layout_alignParentRight="true">

                                <ImageView
                                    android:layout_width="56dp"
                                    android:layout_height="56dp"
                                    android:layout_margin="15dp"
                                    android:background="@drawable/circle_imageview" />

                                <ImageView
                                    android:id="@+id/imageview_like"
                                    android:layout_width="32dp"
                                    android:layout_height="32dp"
                                    android:layout_margin="27dp"
                                    android:background="@drawable/heart_off" />

                            </RelativeLayout>
                        </RelativeLayout>

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/recyclerview_details"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_below="@+id/relative_image"
                            tools:listitem="@layout/feed_detail_item" />


                    </RelativeLayout>

                </android.support.v4.widget.NestedScrollView>


                <RelativeLayout
                    android:id="@+id/relative_footer"
                    android:layout_width="match_parent"
                    android:layout_height="106dp"
                    android:layout_alignParentBottom="true"
                    android:background="#ffffff">

                    <TextView
                        android:id="@+id/textview_name_food"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/total_consumido"
                        android:textColor="@color/color_primary"
                        android:textSize="18sp"
                        android:textStyle="normal" />


                    <LinearLayout
                        android:id="@+id/linear_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textview_name_food"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-medium"
                            android:gravity="center_horizontal"
                            android:text="@string/cal"
                            android:textColor="#5a5757"
                            android:textSize="14sp"
                            android:textStyle="normal" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-medium"
                            android:gravity="center_horizontal"
                            android:text="@string/carb"
                            android:textColor="#5a5757"
                            android:textSize="14sp"
                            android:textStyle="normal" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-medium"
                            android:gravity="center_horizontal"
                            android:text="@string/prot"
                            android:textColor="#5a5757"
                            android:textSize="14sp"
                            android:textStyle="normal" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-medium"
                            android:gravity="center_horizontal"
                            android:text="@string/gord"
                            android:textColor="#5a5757"
                            android:textSize="14sp"
                            android:textStyle="normal" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linear_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/linear_label"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textview_cal_total"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-medium"
                            android:gravity="center_horizontal"
                            android:text="Xcal"
                            android:textColor="@color/color_primary"
                            android:textSize="14sp"
                            android:textStyle="normal" />

                        <TextView
                            android:id="@+id/textview_carb_total"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-medium"
                            android:gravity="center_horizontal"
                            android:text="xg"
                            android:textColor="@color/color_primary"
                            android:textSize="14sp"
                            android:textStyle="normal" />

                        <TextView
                            android:id="@+id/textview_prot_total"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-medium"
                            android:gravity="center_horizontal"
                            android:text="xg"
                            android:textColor="@color/color_primary"
                            android:textSize="14sp"
                            android:textStyle="normal" />

                        <TextView
                            android:id="@+id/textview_gord_total"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-medium"
                            android:gravity="center_horizontal"
                            android:text="xg"
                            android:textColor="@color/color_primary"
                            android:textSize="14sp"
                            android:textStyle="normal" />

                    </LinearLayout>


                </RelativeLayout>


            </RelativeLayout>
        </android.support.v4.widget.SwipeRefreshLayout>


    </RelativeLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id" />

    <include layout="@layout/view_empty_error" />


</RelativeLayout>