<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:id="@+id/relative_profile"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:background="@drawable/bg_profile">

                    <ImageView
                        android:layout_width="94dp"
                        android:layout_height="94dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/circle_imageview_profile" />

                    <ImageView
                        android:id="@+id/imageview_profile"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"

                        />

                    <TextView
                        android:id="@+id/textview_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/imageview_profile"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="center_horizontal"
                        android:maxLines="1"
                        android:text="@string/name_of_author"
                        android:textColor="#ffffff"
                        android:textSize="16sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/textview_goal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textview_name"
                        android:layout_centerHorizontal="true"
                        android:fontFamily="sans-serif"
                        android:gravity="center_horizontal"
                        android:text="@string/goal"
                        android:textColor="#ffffff"
                        android:textSize="14sp"
                        android:textStyle="normal" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/relative_profile">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recyclerview_meals"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_above="@+id/adView"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginTop="10dp" />

                    <com.google.android.gms.ads.AdView
                        android:id="@+id/adView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        ads:adSize="BANNER"
                        ads:adUnitId="@string/banner_ad_unit_id" />

                </RelativeLayout>

            </RelativeLayout>
        </android.support.v4.widget.SwipeRefreshLayout>


    </RelativeLayout>

    <include layout="@layout/view_empty_error" />

</RelativeLayout>